[package]
name = "platformer"
version = "0.1.0"
authors = ["Artem Korotkov <ars.korotkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.5"
specs = { version = "0.15", features = ["specs-derive"] }